--- a/VST/creating_stim.ipynb
+++ b/VST/creating_stim.ipynb
@@ -15,27 +15,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "139d002c-055d-4ac6-a730-8a528342b8d0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "datafile = Path('/Users/nico/Documents/GitHub/EXP/VST/practice_stim.csv')"
+    "datafile = Path('/Users/nico/Documents/GitHub/Experiments/VST/new_stimuli.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "554b407b-5735-4873-bf76-912de2895ec6",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "4"
+       "60"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "id": "7ae2021b-96c6-4f2a-a959-cbdad481cb31",
    "metadata": {},
    "outputs": [
@@ -72,59 +72,53 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>type</th>\n",
-       "      <th>word1</th>\n",
-       "      <th>word2</th>\n",
-       "      <th>word3</th>\n",
-       "      <th>word4</th>\n",
+       "      <th>Condition Type</th>\n",
+       "      <th>Stimuli Combination</th>\n",
+       "      <th>Type</th>\n",
+       "      <th>stimulus</th>\n",
        "      <th>correct_answer</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>neutral</td>\n",
-       "      <td>zxcv</td>\n",
-       "      <td>zxcv</td>\n",
-       "      <td>zxcv</td>\n",
-       "      <td>test</td>\n",
-       "      <td>m</td>\n",
+       "      <td>Facilitation Condition Trials</td>\n",
+       "      <td>uncertainty word target + non-word distractor</td>\n",
+       "      <td>a</td>\n",
+       "      <td>maybe,trrlep,trrlep,trrlep</td>\n",
+       "      <td>z</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>neutral</td>\n",
-       "      <td>zxcv</td>\n",
-       "      <td>zxcv</td>\n",
-       "      <td>zxcv</td>\n",
-       "      <td>test</td>\n",
-       "      <td>m</td>\n",
+       "      <td>Facilitation Condition Trials</td>\n",
+       "      <td>uncertainty word target + non-word distractor</td>\n",
+       "      <td>a</td>\n",
+       "      <td>maybe,trrlep,trrlep,trrlep</td>\n",
+       "      <td>z</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>neutral</td>\n",
-       "      <td>zxcv</td>\n",
-       "      <td>zxcv</td>\n",
-       "      <td>zxcv</td>\n",
-       "      <td>test</td>\n",
-       "      <td>m</td>\n",
+       "      <td>Facilitation Condition Trials</td>\n",
+       "      <td>uncertainty word target + non-word distractor</td>\n",
+       "      <td>a</td>\n",
+       "      <td>maybe,trrlep,trrlep,trrlep</td>\n",
+       "      <td>z</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>neutral</td>\n",
-       "      <td>zxcv</td>\n",
-       "      <td>zxcv</td>\n",
-       "      <td>zxcv</td>\n",
-       "      <td>test</td>\n",
-       "      <td>m</td>\n",
+       "      <td>Facilitation Condition Trials</td>\n",
+       "      <td>uncertainty word target + non-word distractor</td>\n",
+       "      <td>a</td>\n",
+       "      <td>maybe,trrlep,trrlep,trrlep</td>\n",
+       "      <td>z</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>neutral</td>\n",
-       "      <td>zxcv</td>\n",
-       "      <td>zxcv</td>\n",
-       "      <td>zxcv</td>\n",
-       "      <td>test</td>\n",
-       "      <td>m</td>\n",
+       "      <td>Facilitation Condition Trials</td>\n",
+       "      <td>uncertainty word target + non-word distractor</td>\n",
+       "      <td>a</td>\n",
+       "      <td>maybe,trrlep,trrlep,trrlep</td>\n",
+       "      <td>z</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -133,76 +127,96 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
-       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>neutral</td>\n",
-       "      <td>zxcv</td>\n",
-       "      <td>zxcv</td>\n",
-       "      <td>zxcv</td>\n",
-       "      <td>asdf</td>\n",
+       "      <th>59</th>\n",
+       "      <td>Disengagement Condition Trials</td>\n",
+       "      <td>uncategorized neutral word target + uncategori...</td>\n",
+       "      <td>f</td>\n",
+       "      <td>skyscraper,unofficial,unofficial,unofficial</td>\n",
        "      <td>z</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>neutral</td>\n",
-       "      <td>zxcv</td>\n",
-       "      <td>zxcv</td>\n",
-       "      <td>zxcv</td>\n",
-       "      <td>asdf</td>\n",
+       "      <th>59</th>\n",
+       "      <td>Disengagement Condition Trials</td>\n",
+       "      <td>uncategorized neutral word target + uncategori...</td>\n",
+       "      <td>f</td>\n",
+       "      <td>skyscraper,unofficial,unofficial,unofficial</td>\n",
        "      <td>z</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>neutral</td>\n",
-       "      <td>zxcv</td>\n",
-       "      <td>zxcv</td>\n",
-       "      <td>zxcv</td>\n",
-       "      <td>asdf</td>\n",
+       "      <th>59</th>\n",
+       "      <td>Disengagement Condition Trials</td>\n",
+       "      <td>uncategorized neutral word target + uncategori...</td>\n",
+       "      <td>f</td>\n",
+       "      <td>skyscraper,unofficial,unofficial,unofficial</td>\n",
        "      <td>z</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>neutral</td>\n",
-       "      <td>zxcv</td>\n",
-       "      <td>zxcv</td>\n",
-       "      <td>zxcv</td>\n",
-       "      <td>asdf</td>\n",
+       "      <th>59</th>\n",
+       "      <td>Disengagement Condition Trials</td>\n",
+       "      <td>uncategorized neutral word target + uncategori...</td>\n",
+       "      <td>f</td>\n",
+       "      <td>skyscraper,unofficial,unofficial,unofficial</td>\n",
        "      <td>z</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>neutral</td>\n",
-       "      <td>zxcv</td>\n",
-       "      <td>zxcv</td>\n",
-       "      <td>zxcv</td>\n",
-       "      <td>asdf</td>\n",
+       "      <th>59</th>\n",
+       "      <td>Disengagement Condition Trials</td>\n",
+       "      <td>uncategorized neutral word target + uncategori...</td>\n",
+       "      <td>f</td>\n",
+       "      <td>skyscraper,unofficial,unofficial,unofficial</td>\n",
        "      <td>z</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>80 rows × 6 columns</p>\n",
+       "<p>1200 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "       type word1 word2 word3 word4 correct_answer\n",
-       "0   neutral  zxcv  zxcv  zxcv  test              m\n",
-       "0   neutral  zxcv  zxcv  zxcv  test              m\n",
-       "0   neutral  zxcv  zxcv  zxcv  test              m\n",
-       "0   neutral  zxcv  zxcv  zxcv  test              m\n",
-       "0   neutral  zxcv  zxcv  zxcv  test              m\n",
-       "..      ...   ...   ...   ...   ...            ...\n",
-       "3   neutral  zxcv  zxcv  zxcv  asdf              z\n",
-       "3   neutral  zxcv  zxcv  zxcv  asdf              z\n",
-       "3   neutral  zxcv  zxcv  zxcv  asdf              z\n",
-       "3   neutral  zxcv  zxcv  zxcv  asdf              z\n",
-       "3   neutral  zxcv  zxcv  zxcv  asdf              z\n",
+       "                    Condition Type  \\\n",
+       "0    Facilitation Condition Trials   \n",
+       "0    Facilitation Condition Trials   \n",
+       "0    Facilitation Condition Trials   \n",
+       "0    Facilitation Condition Trials   \n",
+       "0    Facilitation Condition Trials   \n",
+       "..                             ...   \n",
+       "59  Disengagement Condition Trials   \n",
+       "59  Disengagement Condition Trials   \n",
+       "59  Disengagement Condition Trials   \n",
+       "59  Disengagement Condition Trials   \n",
+       "59  Disengagement Condition Trials   \n",
        "\n",
-       "[80 rows x 6 columns]"
+       "                                  Stimuli Combination Type  \\\n",
+       "0       uncertainty word target + non-word distractor    a   \n",
+       "0       uncertainty word target + non-word distractor    a   \n",
+       "0       uncertainty word target + non-word distractor    a   \n",
+       "0       uncertainty word target + non-word distractor    a   \n",
+       "0       uncertainty word target + non-word distractor    a   \n",
+       "..                                                ...  ...   \n",
+       "59  uncategorized neutral word target + uncategori...    f   \n",
+       "59  uncategorized neutral word target + uncategori...    f   \n",
+       "59  uncategorized neutral word target + uncategori...    f   \n",
+       "59  uncategorized neutral word target + uncategori...    f   \n",
+       "59  uncategorized neutral word target + uncategori...    f   \n",
+       "\n",
+       "                                       stimulus correct_answer  \n",
+       "0                    maybe,trrlep,trrlep,trrlep              z  \n",
+       "0                    maybe,trrlep,trrlep,trrlep              z  \n",
+       "0                    maybe,trrlep,trrlep,trrlep              z  \n",
+       "0                    maybe,trrlep,trrlep,trrlep              z  \n",
+       "0                    maybe,trrlep,trrlep,trrlep              z  \n",
+       "..                                          ...            ...  \n",
+       "59  skyscraper,unofficial,unofficial,unofficial              z  \n",
+       "59  skyscraper,unofficial,unofficial,unofficial              z  \n",
+       "59  skyscraper,unofficial,unofficial,unofficial              z  \n",
+       "59  skyscraper,unofficial,unofficial,unofficial              z  \n",
+       "59  skyscraper,unofficial,unofficial,unofficial              z  \n",
+       "\n",
+       "[1200 rows x 5 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "id": "6aa7093c-c2b0-4fc3-a6de-06488bc71aa9",
    "metadata": {},
    "outputs": [
@@ -222,20 +236,46 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "    index     type word1 word2 word3     word4 correct_answer\n",
-      "0       1  neutral  test  test  test      zxcv              z\n",
-      "1       0  neutral  zxcv  zxcv  zxcv      test              m\n",
-      "2       1  neutral  test  test  test      zxcv              z\n",
-      "3       2  neutral  test  test  test  practice              m\n",
-      "4       1  neutral  test  test  test      zxcv              z\n",
-      "..    ...      ...   ...   ...   ...       ...            ...\n",
-      "75      3  neutral  zxcv  zxcv  zxcv      asdf              z\n",
-      "76      0  neutral  zxcv  zxcv  zxcv      test              m\n",
-      "77      3  neutral  zxcv  zxcv  zxcv      asdf              z\n",
-      "78      2  neutral  test  test  test  practice              m\n",
-      "79      0  neutral  zxcv  zxcv  zxcv      test              m\n",
+      "      index                  Condition Type  \\\n",
+      "0        59  Disengagement Condition Trials   \n",
+      "1        46   Facilitation Condition Trials   \n",
+      "2        29   Facilitation Condition Trials   \n",
+      "3        59  Disengagement Condition Trials   \n",
+      "4        41   Facilitation Condition Trials   \n",
+      "...     ...                             ...   \n",
+      "1195      3   Facilitation Condition Trials   \n",
+      "1196     44   Facilitation Condition Trials   \n",
+      "1197     44   Facilitation Condition Trials   \n",
+      "1198     18  Disengagement Condition Trials   \n",
+      "1199      6   Facilitation Condition Trials   \n",
       "\n",
-      "[80 rows x 7 columns]\n"
+      "                                    Stimuli Combination Type  \\\n",
+      "0     uncategorized neutral word target + uncategori...    f   \n",
+      "1                 non-word target + non-word distractor    c   \n",
+      "2     categorized neutral word target + non-word dis...    b   \n",
+      "3     uncategorized neutral word target + uncategori...    f   \n",
+      "4                 non-word target + non-word distractor    c   \n",
+      "...                                                 ...  ...   \n",
+      "1195      uncertainty word target + non-word distractor    a   \n",
+      "1196              non-word target + non-word distractor    c   \n",
+      "1197              non-word target + non-word distractor    c   \n",
+      "1198      non-word target + uncertainty word distractor    d   \n",
+      "1199      uncertainty word target + non-word distractor    a   \n",
+      "\n",
+      "                                         stimulus correct_answer  \n",
+      "0     skyscraper,unofficial,unofficial,unofficial              z  \n",
+      "1                rjuqubbx,jnkwapj,jnkwapj,jnkwapj              m  \n",
+      "2     dishwasher,ztqtpuoefr,ztqtpuoefr,ztqtpuoefr              z  \n",
+      "3     skyscraper,unofficial,unofficial,unofficial              z  \n",
+      "4                         pglql,mnklu,mnklu,mnklu              m  \n",
+      "...                                           ...            ...  \n",
+      "1195                  random,tfgnkc,tfgnkc,tfgnkc              z  \n",
+      "1196                  zjgdys,gwmwql,gwmwql,gwmwql              m  \n",
+      "1197                  zjgdys,gwmwql,gwmwql,gwmwql              m  \n",
+      "1198      cgpfdjfrq,uncertain,uncertain,uncertain              m  \n",
+      "1199              unclear,jhldvfd,jhldvfd,jhldvfd              z  \n",
+      "\n",
+      "[1200 rows x 6 columns]\n"
      ]
     }
    ],
@@ -246,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "id": "55f53fdb-bb5a-4c91-8edf-2d641daee101",
    "metadata": {},
    "outputs": [],
